# Captionary

Captionary.ReactClient/: .env  package.json
Captionary.ReactClient/public/: index.html
Captionary.WebAPI/: Captionary.WebAPI.csproj  Program.cs  Startup.cs
captionary_server/: Cargo.toml  test.html
captionary_server/migrations/2018-07-31-212658_create_caption/: down.sql  up.sql
captionary_server/migrations/2018-08-14-171419_create_room/: up.sql
captionary_server/migrations/2018-08-14-205047_create_player_session/: up.sql
captionary_server/migrations/2018-08-14-205047_create_user/: up.sql
captionary_server/migrations/2018-08-14-205950_add_user_to_caption/: down.sql  up.sql
captionary_server/migrations/2018-08-16-163002_create_game/: up.sql
captionary_server/migrations/2018-08-17-001639_create_round/: down.sql  up.sql
captionary_server/migrations/2018-08-17-004840_add_round_id_to_caption/: down.sql  up.sql
captionary_server/migrations/2018-08-18-185453_add_stage_fields_to_round/: down.sql  up.sql
captionary_server/migrations/2018-09-14-184730_create_vote/: up.sql
captionary_server/src/: amqp.rs  database.rs  flickr.rs  jwt.rs  main.rs  runner.rs  schema.rs
captionary_server/src/controllers/: mod.rs  rooms.rs  sessions.rs  users.rs
captionary_server/src/controllers/captions/: mod.rs
captionary_server/src/models/: caption.rs  game.rs  mod.rs  room.rs  round.rs  session.rs  user.rs  vote.rs
captionary_server/src/util/: flickr.rs  mod.rs
captionary_server/src/web_socket/: client.rs  event.rs  mod.rs  server.rs  state.rs  user_handler.rs
(+75 files in other folders)
