[package]
name = "captionary_server"
version = "0.1.0"
authors = ["Matt Ryder <matt@mattryder.co.uk>"]

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
rocket = "0.3.15"
rocket_codegen = "0.3.15"
rocket_contrib = "0.3.15"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"